Fixed vertical spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,7 @@ section {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -10px;
+  gap: 10px;
   padding: 0;
 }
 
@@ -27,16 +28,14 @@ section {
 .photo {
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
+  flex: 1 2 auto;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 0 10px;
-  width: 170px;
+  width: 200px;
   height: 500px;
   box-sizing: border-box;
-  background: #fff;
   border-radius: 5px;
- border-style: outset;
   cursor: pointer;
 
   /* setup for bg images */
@@ -65,7 +64,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   border-radius: 5px;
   padding-left: 1rem;
   padding-right: 1rem;
